# LLMpirical

./: README.md  lorem_token.ipynb  setup.cfg
src/LLMpirical/: __init__.py  experiment.py
