[metadata]
name = LLMpirical
version = 0.0.1
author = Kyle Moore
author_email = moore.kyle.andrew@gmail.com
description = Library for Empirical Behavior Evaluation in LLMs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src